<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet"
            android:title="@string/my_wallet" />

<!--        <item-->
<!--            android:id="@+id/nav_earning"-->
<!--            android:icon="@drawable/earning"-->
<!--            android:title="@string/my_earning" />-->

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/history" />

<!--        <item-->
<!--            android:id="@+id/nav_review"-->
<!--            android:icon="@drawable/rating"-->
<!--            android:title="@string/review" />-->
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/settings"-->
<!--            android:title="@string/settings" />-->
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faq"
            android:title="@string/faq" />

    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/live_help"
                android:title="@string/contact_us" />

            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/bug"
                android:title="@string/report_bug" />

            <item
                android:id="@+id/nav_suggestion"
                android:icon="@drawable/input"
                android:title="@string/suggest_features" />

        </menu>
    </item>
    <item
        android:title="About">
        <menu>
            <item
                android:id="@+id/legal"
                android:title="@string/legal"/>
            <item
                android:id="@+id/privacy"
                android:title="@string/privacy"/>

        </menu>

    </item>
    <item
        android:title="Logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>

    </item>


</menu>
